[tool.poetry]
name = "UI"
version = "0.1.0"
description = "Circuitizer is the free and open source electric circuit development suit"
authors = ["AshBlade <jeenamurali100tab@gmail.com>"]
license = "GPL-2.0-only"
repository = "https://github.com/rithviknishad/Circuitizer"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
nuitka = "^0.6.5"
setuptools = "^42.0.2"
pip = "^19.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
